Updates from Overleaf

--- a/latex/main.tex
+++ b/latex/main.tex
@@ -113,7 +113,7 @@
 %online.}
 %We suggest a maximum length of 350 words for the Abstract
 
-\abstract{There are more than 7,000 languages on our planet today, but they are not evenly distributed over the population. There are over 100 languages in Vanuatu, but only one in S\={a}moa. This is in spite of the populations being similarly sized, having similar histories etc. Why might this be? This paper explores this question for one particular region: Remote Oceania. Remote Oceania comprises the eastern Solomon Islands (Temotu), Vanuatu, New Caledonia, Fiji, Polynesia and Micronesia. The region was settled more recently than the rest of Oceania and initially entirely by Austronesian speakers. Through studies in archaeology, history and linguistics, as well as community knowledge, much is known about migration patterns and societal organization of this part of the world. The comparatively shallow time depth, the relatedness of the languages and established knowledge about the history make it an ideal base for understanding language diversification. One particular theory has been proposed to explain the discrepancy in language richness over Remote Oceania --- societal organisation. In this study, we test if this factor remains an important predictor of the number of languages also when other relevant factors are taken into account, such as time-depth and environment. The results show that the theory does hold in terms of statistical power, but that there are important caveats such as the instantiation of the variable ``political complexity'' and its relationship with contact with Oceanic neighbours further west who do not speak Austronesian languages.}
+\abstract{There are more than 7,000 languages on our planet today, but they are not evenly distributed. There are over 100 languages in Vanuatu, but only one in S\={a}moa. This is in spite of the populations being similarly sized, having similar histories etc. Why might this be? This paper explores this question for one particular region: Remote Oceania. Remote Oceania comprises the eastern Solomon Islands (Temotu), Vanuatu, New Caledonia, Fiji, Polynesia and Micronesia. The region was settled more recently than the rest of Oceania and initially entirely by Austronesian speakers. Through studies in archaeology, history and linguistics, as well as community knowledge, much is known about migration patterns and societal organization of this part of the world. The comparatively shallow time depth, the relatedness of the languages and established knowledge about the history make it an ideal base for understanding language diversification. One particular theory has been proposed to explain the discrepancy in language richness over Remote Oceania --- societal organisation. In this study, we test if this factor remains an important predictor of the number of languages also when other relevant factors are taken into account, such as time-depth and environment, using a Bayesian Regression model approach. The results show that the theory does hold in terms of statistical power, but that there are important caveats such as the instantiation of the variable ``political complexity'' and its relationship with contact with Oceanic neighbours in the New Guinea region.}
 
 %Scholars have suggested several reasons for the large discrepancy between the number of languages per island group in Remote Oceania, such as societal organisation, environmental factors and settlement time. 
 
@@ -314,7 +314,7 @@ For the shared language island groups, the variables that have a 95\% confidence
 
 % #Frederic says: could also compute pareto-k https://mc-stan.org/loo/reference/pareto-k-diagnostic.html
 
-Most of the island groups can be removed with little effect on the overall accuracy of predictions (see Fig. \ref{brms_medium_dropped_ou    t_plot_diff} in \ref{appendix_supp_figs}), however, when Malakula (central Vanuatu), is left out, the difference average difference between predicted and observed becomes lower (1.3 $\rightarrow$ 0.9). Malakula is the island group with the highest number of languages (see Fig \ref{polygon_plot_medium} in appendix \ref{sec:island_geo}). Political complexity remains an important predictor regardless of which island group is dropped.
+Most of the island groups can be removed with little effect on the overall accuracy of predictions (see Fig. \ref{brms_medium_dropped_out_plot_diff} in \ref{appendix_supp_figs}), however, when Malakula (central Vanuatu), is left out, the difference average difference between predicted and observed becomes lower (1.3 $\rightarrow$ 0.9). Malakula is the island group with the highest number of languages (see Fig \ref{polygon_plot_medium} in appendix \ref{sec:island_geo}). Political complexity remains an important predictor regardless of which island group is dropped.
 
 %and shoreline in interaction with time depth are the variables that have a significant impact, i.e. do not cross zero (see coefficent distributions in Figs.  and \ref{brms_medium_group_full_effect_ridge_panels} in appendix \ref{appendix_supp_figs}).
 
@@ -350,7 +350,7 @@ For tables of the predictor Estimates, Rhat and ESS of both models, please see a
 \label{pol_study_discisson}
 The results indicate that political complexity could be relevant for understanding the dynamics of language diversification in Remote Oceania, but further studies are needed --- especially regarding Vanuatu. 
 
-When the island group Vanuatu + Temotu was dropped, the model for overnight sailing island groups no longer drew on political complexity as a relevant predictor of language richness. This may indicate that it primarily made use of the term to tell apart Vanuatu + Temotu from all other island groups. Vanuatu + Temotu is by far the island group with the most languages, 130, and it is dominated by societies that are classed as level 1 on the scale of vertical political complexity used by the Ethnographic Atlas \citep{gray1998ethnographic} and other studies \citep{watts_2018}, see Fig. \ref{pol_complex_map} in appendix \ref{appendix_pol_complex}).
+When the island group Vanuatu + Temotu was dropped, the model for overnight sailing island groups no longer drew on political complexity as a relevant predictor of language richness. This may indicate that it primarily made use of the variable to tell apart Vanuatu + Temotu from all other island groups. Vanuatu + Temotu is by far the island group with the most languages, 130, and it is dominated by societies that are classed as level 1 on the scale of vertical political complexity used by the Ethnographic Atlas \citep{gray1998ethnographic} and other studies \citep{watts_2018}, see Fig. \ref{pol_complex_map} in appendix \ref{appendix_pol_complex}).
 
 Furthermore, if we tease apart the argument concerning political complexity (for example in the full DAG in Fig. \ref{Predicting_lgs_DAG_full} in appendix \ref{appendix_DAG_def} or Fig. \ref{Predicting_lgs_DAG_andy} in section \ref{sec:previous_research}), we find that conceptually the link between the number of languages and political complexity is not direct. It could be mediated through other factors such as network modularity, the propensity to maintain long-distance contact etc. 
 
@@ -358,9 +358,9 @@ Furthermore, if we tease apart the argument concerning political complexity (for
 
 Maintaining long-distance contact can indeed be a function of shared cultural identity. \citet[218-291]{skirgaard2020multilevel} notes that there are not only fewer languages in the island groups of Polynesia, but they are also more similar to each other lexically than languages in Vanuatu are. This relationship does not hold for grammatical features however, languages in Polynesia are similarly different from each other grammatically as languages of Vanuatu and other island groups in Remote Oceania are (as measured by Grambank features, \citep{grambank_release}). It has been suggested, by \citet{silverstein1981limits}, \citet{francois2011} and others (c.f. \citet{mansfield2023dialect}), that communities pay special attention to words and sound differences as emblematic of shared ties --- but grammar tends to fly under the radar in this respect. This difference between Vanuatu and Polynesia in terms of lexical dissimilarity and language richness, but the similarity in terms of grammatical diversification may indicate that the cause does indeed lie in attitudes and social network organisation rather than merely time and environmental factors.
 
-\citet{curriemace2009} argue that the reason behind their results (higher political complexity = larger language areas) is that societies with higher political complexity are more likely to be able to replace existing groups in an area, or otherwise incorporate (and possibly assimilate) them. It may also be the case that diversity in Polynesia was reduced by later expansionist efforts by societies with higher political complexity. For example, the island of Niuafo'ou which lies between Tonga, 'Uvea and S\={a}moa is home to a language that is most closely related to 'Uvean. This language has however become \emph{more} similar to Tongan during the period of Tongan domination in the area 1000-1300's (see \citet{aswani1998tongan} and \citep[2-9]{tuskamoto_niuafoou}). It may be that politically complex societies do not only \emph{maintain} homogeneity by continuing being in contact after first settlement, but can also reduce diversity which emerges after settlement through incorporation and cultural dominance later.
+\citet{curriemace2009} argue that the reason behind their results (higher political complexity = larger language areas) is that societies with higher political complexity are more likely to be able to replace existing groups in an area, or otherwise incorporate (and possibly assimilate) them. It may also be the case that diversity in Polynesia was reduced by later expansionist efforts by societies with higher political complexity. For example, the island of Niuafo'ou which lies between Tonga, 'Uvea and S\={a}moa is home to a language that is most closely related to 'Uvean. This language has however become \emph{more} similar to Tongan during the period of Tongan domination in the area 1000-1300's (see \citet{aswani1998tongan} and \citep[2-9]{tuskamoto_niuafoou}). It may be that politically complex societies do not only \emph{maintain} homogeneity by continuing to be in contact after first settlement, but can also reduce diversity which emerges after settlement through incorporation and cultural dominance later.
 
-Whatever the political complexity variable is tracking, it is clear that it is one of the variables that most clearly picks out Vanuatu and Vanuatu is the place with the most languages. Where did this difference in societal organisation come from? As previous studies have indicated (e.g. \citet{lynch1981melanesian}), the answer may lie in contact with people of non-East Asian origin further west. It is possible that contact with communities from New Guinea and Solomons (in Bismarck before migration to Vanuatu or in Vanuatu after initial settlement) brought with it societal changes to Vanuatu that made history go a different way there than in islands further east (c.f. Pawley's idea of the same process at different speeds). Besides the possible cultural influence on attitudes and societal organisation, they may also have brought with them their own cultural heritage which would add to the diversity in itself.
+Whatever the political complexity variable is tracking, it is clear that it is one of the variables that most clearly picks out Vanuatu and that Vanuatu is the place with the most languages. Where did this difference in societal organisation come from? As previous studies have indicated (e.g. \citet{lynch1981melanesian}), the answer may lie in contact with people of non-East Asian origin further west. It is possible that contact with communities from New Guinea and Solomons (in Bismarck before migration to Vanuatu or in Vanuatu after initial settlement) brought with it societal changes to Vanuatu that caused it to be a different place from islands further east (c.f. Pawley's idea of the same process at different speeds). Besides the possible cultural influence on attitudes and societal organisation, they may also have brought with them their own cultural heritage which would add to the diversity in itself.
 
 %In order to understand language diversification, we need to understand the steps of the process. Before languages have split into different mutually unintelligible varieties, 
 
@@ -375,7 +375,9 @@ Whatever the political complexity variable is tracking, it is clear that it is o
 
 %It is beyond the scope of this study to fully investigate the causality of language diversification in Remote Oceania. Causality in cultural evolution is very complicated, since factors can interact on many levels and it is difficult to control for unknown variables and proxy effects (c.f \citet{roberts2013linguistic}). In this instance, we will be satisfied with testing if there is a correlation between societal structure and language diversity that is still signifncant once environmental and settlement time has been incorporated into the model.
 
-Unlike the studies by \citet{gavin2012island}, \citet{hua2019ecological} and others, the results of this study indicate that environmental factors such as rainfall seasonality and isolation have less of an impact on language diversity in Remote Oceania. This is most likely because most of the island groups share a similar climate, and there is therefore not enough variation to tease them apart.
+Similarly to \citet{gavin2012island}, \citet{hua2019ecological} and others, the results of this study indicate that environmental factors, as encapsulated by the principal components, play some in explaining language diversity in Remote Oceania. However, size, time depth and political complexity are clearly necessary to take into account for this region.
+
+%This is most likely because most of the island groups share a similar climate, and there is therefore not enough variation to tease them apart.
 
 %As can be seen from the specific predictions the models make (Fig. \ref{medium_model_predict} and Fig. \ref{SBZR_model_predict}), neither model accurately predicts the key island groups in our dataset (Vanuatu, Kanaky (New Caledonia) and Temotu). Explaining the difference between Melanesian Remote Oceania and the rest is the most important factor in evaluating our hypothesis. Therefore the results should be interpreted as ultimately inconclusive. 
 
@@ -388,9 +390,7 @@ Unlike the studies by \citet{gavin2012island}, \citet{hua2019ecological} and oth
 \section{Conclusions}
 This study investigated the hypothesis that besides time depth and environmental factors (c.f. \citet{curriemace2009, gavin2012island, hua2019ecological} and \citet{Pacheco_Coelho_2019}), language richness in Remote Oceania is also significantly influenced by interaction patterns that can be measured by political complexity (c.f. \citet{pawley81, pawley2007}). The results lend support to this thesis, with some caveats. 
 
-Political complexity is, perhaps unsurprisingly, a complex variable. There are a number of phenomena in our social world that it could track, including network dynamics and in the case of Remote Oceania specifically --- contact with communities in New Guinea and Solomon Islands. It is clear that in terms of constructing predictive models, it contributes significant power to the case of island groups in Remote Oceania and language richness. However, in order to understand the situation we need to deconstruct this concept further and conduct studies that tease apart the specific circumstances --- especially in Vanuatu. 
-
-
+Political complexity is, perhaps unsurprisingly, a complex variable. There are a number of phenomena in our social world that it could track, including network dynamics and in the case of Remote Oceania specifically --- deep contact with communities in New Guinea and Solomon Islands. It is clear that in terms of constructing predictive models of the number of languages per island group, it contributes significant power to the case of Remote Oceania. However, in order to understand the situation we need to deconstruct this concept further and conduct studies that tease apart the specific circumstances --- especially in Vanuatu. 
 
 %The results of this study lend support to the theory that political complexity is a significant factor in predicting language diversity in Remote Oceania beyond what can be accounted for by environmental factors, size of islands and time-depth of human settlement. However, 
 
@@ -424,7 +424,7 @@ Political complexity is, perhaps unsurprisingly, a complex variable. There are a
 \section{Data and code availability}
 \label{supp_data_availability}
 
-All data in this study is available freely. The data has been gathered from multiple sources, and is aggregated and will be published along with the code for the study on OSF/GitHub/Zenodo. The code is also made available, from gathering data to conducting analysis and preparing plots and tables. 
+All data in this study is available freely. The data has been gathered from multiple sources and is aggregated and will be published along with the code for the study on OSF/GitHub/Zenodo. The code is also made available, from gathering data to conducting analysis and preparing plots and tables. 
 
 Anonymised OSF project for double-blind peer review: \url{https://osf.io/amnh9/?view_only=403d57d715254539a3a99c798b4014d2}.
 
