Updates from Overleaf

--- a/latex/main.tex
+++ b/latex/main.tex
@@ -56,6 +56,7 @@
 \usepackage{placeins} %to enable float barriers
 %\usepackage{CJKutf8} %chinese caracthers
 %\usepackage{amsmath} % for equations
+\usepackage{graphicx} 
 \usepackage{booktabs} % for nice looking tables
 \usepackage{longtable} %for tables stretching several pages
 \usepackage{pdflscape} %for making things landscape
