Updates from Overleaf

--- a/latex/main.tex
+++ b/latex/main.tex
@@ -143,7 +143,7 @@ Fig.~\ref{RO_overnight_coloured_dots} shows the language richness of the islands
 
 \begin{sidewaysfigure}[p]
 \centering
-\includegraphics[width=\textwidth]{CartoGIS_oceania_languages_subgreions_edited.png}
+\includegraphics[width=\textwidth]{CartoGIS_oceania_languages_subgreions_edited}
 \caption{Map of Oceania, with the regions of Near and Remote Oceania marked out (first labelled by \citet{pawley1973dating}). Points represent languages, based on data \citet{glottolog3} with a few small adjustments by author.} 
 \label{RO_overnight_coloured_dots}
 \end{sidewaysfigure}
@@ -184,7 +184,7 @@ This proposal by \citet{pawley81, pawley2007} can be expressed in a Directed Acy
 
 \begin{figure}[ht]
 \centering
-\includegraphics[width=0.7\textwidth]{Predicting_lgs_DAG_andy.png}
+\includegraphics[width=0.7\textwidth]{Predicting_lgs_DAG_andy}
 \caption{Directed Acyclic Graph of the argument presented in \cite{pawley2007}. Blue = variable to be predicted (response).}
 \label{Predicting_lgs_DAG_andy}
 \end{figure}
@@ -271,7 +271,7 @@ The relationship between variables can be represented in a formalised manner in 
 
 \begin{figure}[!ht]
 \centering
-\includegraphics[width=\textwidth]{Predicting_lgs_DAG_slimmed.png}
+\includegraphics[width=\textwidth]{Predicting_lgs_DAG_slimmed}
 \caption{Directed Acyclic Graph of the variables in this study (DAG, c.f. \cite{mcelreath2020statistical}). Blue = variable to be predicted (response), red = predictors. Asterisk nodes represent variable interactions, a type of deterministic DAG-node. PCA represents Principal Components Analysis. PCA was run on the incoming variables, and the optimal number of components (given a Non-Graphical Cattel's Scree Test) were carried forward. Terra and Aqua are the names of the NASA satellites.}
 \label{Predicting_lgs_DAG_slimmed}
 \end{figure}
@@ -308,7 +308,7 @@ Fig.~\ref{medium_model_predict} shows the actual observed language counts (purpl
 
 \begin{figure}[ht]
 \centering
-\includegraphics[width=0.6\textwidth]{brms_predict_medium.png}
+\includegraphics[width=0.6\textwidth]{brms_predict_medium}
 \caption{Prediction from the model with island grouped for shared language. Number of languages is on the x-axis, observations on the Y. The dark blue triangles represent the observed number of languages, the green boxplot the predictions of the model. The average absolute difference between the mean of the predictions and the observed value is 1.3.}
 \label{medium_model_predict}
 \end{figure}
@@ -325,7 +325,7 @@ For the overnight sailing distances, several island groups are much larger than 
 
 \begin{figure}[ht]
 \centering
-\includegraphics[width=0.6\textwidth]{latex/brms_predict_SBZR.png}
+\includegraphics[width=0.6\textwidth]{latex/brms_predict_SBZR}
 \caption{Prediction from the model with island grouped for overnight sailing distances. The dark blue triangles represent the observed number of languages, the green boxplot the predictions of the model. The average absolute difference between the mean of the predictions and the observed value is 1.6.}
 \label{SBZR_model_predict}
 \end{figure}
@@ -549,7 +549,7 @@ Unlike SIL's ISO 639-3, Glottolog does not discuss shared cultural identity or l
 
 \begin{figure}[ht]
 \centering
-\includegraphics[width=0.8\textwidth]{Glottolog_classifying_tree.png}
+\includegraphics[width=0.8\textwidth]{Glottolog_classifying_tree}
 \caption[Decision tree for language identification and classification in Glottolog]{{Decision tree for language identification and classification in Glottolog \citep{glottologlanguoids}.}}
 \label{glottolog_class_tree}
 \end{figure}
@@ -599,7 +599,7 @@ These two principles, overnight sailing distances and sharing a language, have b
 
 \begin{figure}[ht]
 \centering
-\includegraphics[width=\textwidth]{marck_2000_east_poly.png}
+\includegraphics[width=\textwidth]{marck_2000_east_poly}
 \caption{{Map of central East Polynesia from \citet{marck2000}, showing 100 mile radii.}}
 \label{Marck_2000_east_poly}
 \end{figure}
@@ -617,7 +617,7 @@ However, this way of grouping islands does not take into account currents and wi
 
 \begin{sidewaysfigure}[p]
 \centering
-\includegraphics[width=\textwidth]{polygon_SBZR_group_map.png}
+\includegraphics[width=\textwidth]{polygon_SBZR_group_map}
 \caption{{Distribution of languages per overnight sailing distance island group.}}
 \label{polygon_plot_SBZR}
 \end{sidewaysfigure}
@@ -626,7 +626,7 @@ However, this way of grouping islands does not take into account currents and wi
 
 \begin{sidewaysfigure}[p]
 \centering
-\includegraphics[width=\textwidth]{polygon_medium_group_map_vanuatu_mh_inset.png}
+\includegraphics[width=\textwidth]{polygon_medium_group_map_vanuatu_mh_inset}
 \caption{{Distribution of languages per shared language island group. Island groups with only one language do not have a label because otherwise the map is too difficult to read. All island groups without a label have 1 language.}}
 \label{polygon_plot_medium}
 \end{sidewaysfigure}
@@ -677,7 +677,7 @@ Specifically, it is necessary to underline that despite the common name for this
 
 \begin{figure}[ht]
 \centering
-\includegraphics[width=\textwidth]{latex/kula_ring_damon.png}
+\includegraphics[width=\textwidth]{latex/kula_ring_damon}
 \caption{Kula exchange ring, from \citet{damon2002kula}.}
 \label{kula_ring}
 \end{figure}
@@ -711,7 +711,7 @@ This way of characterising political structure aligns well with ethnographic acc
 
 \begin{figure}[ht]
 \centering
-\includegraphics[width=\textwidth]{pyramid_meleisea.png}
+\includegraphics[width=\textwidth]{pyramid_meleisea}
 \caption[Illustration of traditional political organisation of S\={a}moa.]{{Illustration of the traditional political organisation of S\={a}moa from \citet[22]{meleisea1995}.}}
 \label{meleiseapyramid}
 \end{figure}
@@ -734,7 +734,7 @@ D-PLACE has a value recorded for political complexity for 44 ``language-societie
 
 %\begin{figure}[ht]
 %\centering
-%\includegraphics[width=13cm]{Bonnemaison_1996_vanuatu_map.png}
+%\includegraphics[width=13cm]{Bonnemaison_1996_vanuatu_map}
 %\caption{{Map of traditional systems of power in Vanuatu, from \citet[201]{bonnemaison1996graded}.}}
 %\label{Bonnemaison_map}
 %\end{figure}
@@ -748,7 +748,7 @@ For the calculations of this study, the mode political complexity per island gro
 
 \begin{sidewaysfigure}
 \centering
-\includegraphics[width=0.8\textwidth]{map_pol_complex.png}
+\includegraphics[width=0.8\textwidth]{map_pol_complex}
 \caption[Map of Remote Oceania: Political complexity]{{Map of Remote Oceania with associated values for political complexity (EA033).}}
 \label{pol_complex_map}
 \end{sidewaysfigure}
@@ -769,7 +769,7 @@ For comparison across island groups, the oldest settlement order per group was u
 
 \begin{sidewaysfigure}
 \centering
-\includegraphics[width=0.8\textwidth]{Map_RO_dates.png}
+\includegraphics[width=0.8\textwidth]{Map_RO_dates}
 \caption{{Map of island groups in Remote Oceania labelled with settlement order.}}
 \label{dates_map}
 \end{sidewaysfigure}
@@ -837,14 +837,14 @@ Figs \ref{fig:un_pop_plot} and \ref{fig:un_pop_plot_log10} show the relationship
 
 \begin{figure}[ht]
     \centering
-    \includegraphics[width=.7\textwidth]{number_of_languages_vs_pop_1950.png}
+    \includegraphics[width=.7\textwidth]{number_of_languages_vs_pop_1950}
     \caption{Population in 1950 per country (x-axis) and number of languages per country (y-axis). Dark blue triangles = countries with at least some landmasses in Remote Oceania, green circles = all other countries.}
         \label{fig:un_pop_plot}
     \end{figure}
     
 \begin{figure}[ht]
     \centering
-          \includegraphics[width=.7\textwidth]{number_of_languages_vs_pop_1950_log10.png}
+          \includegraphics[width=.7\textwidth]{number_of_languages_vs_pop_1950_log10}
     \caption{Population in 1950 per country (x-axis) and number of languages per country (y-axis) - log-10-transformed. Dark blue triangles = countries with at least some landmasses in Remote Oceania, green circles = all other countries.}
     \label{fig:un_pop_plot_log10}
     \end{figure}
@@ -852,7 +852,7 @@ Figs \ref{fig:un_pop_plot} and \ref{fig:un_pop_plot_log10} show the relationship
 While it is not possible to include historic population size as a variable, it is possible that the environmental variables are relevant here as they may suggest island groups that could be home to larger populations. Fig. \ref{SPLOM_country_all_variables} shows the relationship between the population data and language count data above to the variables of this study. The first four rows represent the data summarised per country (i.e. from  \citet{UN_pop} and \citet{glottolog3}) and the rest are per island group in Remote Oceania. This means there is a mismatch of units of analysis, for example: Hawai'i is a part of the United States of America and therefore is included in the data point for the entire USA. The ``lg count (island group)'' contains only the number of languages in Hawai'i in the island groups included in this study, i.e. 1.
 
 \begin{figure}[ht]
-    \includegraphics[width=\textwidth]{latex/SPLOM_country_all_variables.png}
+    \includegraphics[width=\textwidth]{latex/SPLOM_country_all_variables}
 \caption{Scatterplot matrix of all variables available, over countries. Note that the population data is taken from \citet{UN_pop} and refers to the whole country, i.e. the population of the entire USA --- not just Hawai'i..}
 \label{SPLOM_country_all_variables}
 \end{figure}
@@ -927,7 +927,7 @@ Directed Acyclic Graphs are a helpful tool in causal reasoning (\citet{pearl1995
 
 \begin{sidewaysfigure}[p] 
 
-\includegraphics[width=\textwidth]{Predicting_lgs_DAG_full.png}
+\includegraphics[width=\textwidth]{Predicting_lgs_DAG_full}
 \caption{Directed Acyclic Graph of the variables in this study. Blue = variable to be predicted (response). Asterisk-nodes represent interactions.}
 \label{Predicting_lgs_DAG_full}
 \end{sidewaysfigure}
@@ -1044,7 +1044,7 @@ Anonymised OSF project for double-blind peer review: \url{https://osf.io/amnh9/?
 
 \begin{figure}[ht]
 
-\includegraphics[width=\textwidth]{brms_SBZR_group_full_effect_ridge_panels_plot.png}
+\includegraphics[width=\textwidth]{brms_SBZR_group_full_effect_ridge_panels_plot}
 \caption{Coefficient distribution of BRMS model, using overnight sailing distances island groups with all observations. Distributions, where the 95\% confidence interval straddles zero, are marked as more transparent and with dashed outlines.}
 \label{brms_SBZR_group_full_effect_ridge_panels}
 \end{figure}
@@ -1052,7 +1052,7 @@ Anonymised OSF project for double-blind peer review: \url{https://osf.io/amnh9/?
 \begin{figure}[ht]
 \centering
 
-\includegraphics[width=\textwidth]{brms_medium_group_full_effect_ridge_panels_plot.png}
+\includegraphics[width=\textwidth]{brms_medium_group_full_effect_ridge_panels_plot}
 \caption{Coefficient distribution of BRMS model, using shared-language island groups with all observations. Distributions, where the 95\% confidence interval straddles zero, are marked as more transparent and with dashed outlines.}
 \label{brms_medium_group_full_effect_ridge_panels}
 \end{figure}
@@ -1060,7 +1060,7 @@ Anonymised OSF project for double-blind peer review: \url{https://osf.io/amnh9/?
 \begin{figure}[ht]
 \centering
 
-\includegraphics[width=0.8\textwidth]{brms_SBZR_dropped_out_plot_diff.png}
+\includegraphics[width=0.8\textwidth]{brms_SBZR_dropped_out_plot_diff}
 \caption{Mean absolute difference of predicted and observed number of languages per island group (overnight sailing distances group). Every column represents a new run of the model with a particular group dropped out from the observations. When Vanuatu + Temotu is dropped out, the model predicts numbers that are more similar to the observed values than when that island group is included in the model.}
 \label{brms_SBZR_dropped_out_plot_diff}
 \end{figure}
@@ -1068,7 +1068,7 @@ Anonymised OSF project for double-blind peer review: \url{https://osf.io/amnh9/?
 \begin{figure}[ht]
 \centering
 
-\includegraphics[width=0.8\textwidth]{brms_medium_dropped_out_plot_diff.png}
+\includegraphics[width=0.8\textwidth]{brms_medium_dropped_out_plot_diff}
 \caption{Mean absolute difference of predicted and observed number of languages per island group (shared language grouping). Every column represents a new run of the model with a particular group dropped out from the observations. When Malakula is dropped out, the model predicts numbers that are more similar to the observed values than when that island group is included in the model.}
 \label{brms_medium_dropped_out_plot_diff}
 \end{figure}
@@ -1076,14 +1076,14 @@ Anonymised OSF project for double-blind peer review: \url{https://osf.io/amnh9/?
 
 \begin{figure}[ht]
 \centering
-\includegraphics[width=\textwidth]{latex/SPLOM_SBZR_all_variables.png}
+\includegraphics[width=\textwidth]{latex/SPLOM_SBZR_all_variables}
 \caption{Scatterplot matrix of all variables available, over overnight-sailing-groups.}
 \label{SPLOM_SBZR_all_variables}
 \end{figure}
 
 \begin{figure}[ht]
 \centering
-\includegraphics[width=\textwidth]{latex/SPLOM_medium_all_variables.png}
+\includegraphics[width=\textwidth]{latex/SPLOM_medium_all_variables}
 \caption{Scatterplot matrix of all variables available, over shared-language-groups.}
 \label{SPLOM_medium_all_variables}
 \end{figure}
