--- a/latex/used_pkgs.bib
+++ b/latex/used_pkgs.bib
@@ -78,6 +78,14 @@
   url = {https://CRAN.R-project.org/package=forcats},
 }
 
+@Manual{R-fs,
+  title = {fs: Cross-Platform File System Operations Based on libuv},
+  author = {Jim Hester and Hadley Wickham and Gábor Csárdi},
+  year = {2023},
+  note = {R package version 1.6.2},
+  url = {https://CRAN.R-project.org/package=fs},
+}
+
 @Manual{R-ggalt,
   title = {ggalt: Extra Coordinate Systems, Geoms, Statistical Transformations,
 Scales and Fonts for ggplot2},
@@ -118,6 +126,14 @@ ggplot2},
   year = {2021},
   note = {R package version 4.2.4},
   url = {https://github.com/jrnold/ggthemes},
+}
+
+@Manual{R-groundhog,
+  title = {groundhog: Version-Control for CRAN, GitHub, and GitLab Packages},
+  author = {Uri Simonsohn and Hugo Gruson},
+  year = {2023},
+  note = {R package version 3.1.0},
+  url = {https://CRAN.R-project.org/package=groundhog},
 }
 
 @Manual{R-jsonlite,
@@ -187,6 +203,14 @@ Cattell Scree Test},
   url = {https://CRAN.R-project.org/package=nFactors},
 }
 
+@Manual{R-patchwork,
+  title = {patchwork: The Composer of Plots},
+  author = {Thomas Lin Pedersen},
+  year = {2023},
+  note = {R package version 1.1.3},
+  url = {https://CRAN.R-project.org/package=patchwork},
+}
+
 @Manual{R-psych,
   title = {psych: Procedures for Psychological, Psychometric, and Personality
 Research},
@@ -221,14 +245,6 @@ https://personality-project.org/r/psych-manual.pdf},
   url = {https://rspatial.org/raster},
 }
 
-@Manual{R-readODS,
-  title = {readODS: Read and Write ODS Files},
-  author = {Gerrit-Jan Schutten and Chung-hong Chan and Thomas J. Leeper and Detlef Steuer},
-  year = {2023},
-  note = {R package version 1.8.0},
-  url = {https://github.com/ropensci/readODS},
-}
-
 @Manual{R-readr,
   title = {readr: Read Rectangular Text Data},
   author = {Hadley Wickham and Jim Hester and Jennifer Bryan},
@@ -243,14 +259,6 @@ https://personality-project.org/r/psych-manual.pdf},
   year = {2020},
   note = {R package version 1.4.4},
   url = {https://github.com/hadley/reshape},
-}
-
-@Manual{R-rstan,
-  title = {rstan: R Interface to Stan},
-  author = {Jiqiang Guo and Jonah Gabry and Ben Goodrich and Sebastian Weber},
-  year = {2023},
-  note = {R package version 2.21.8},
-  url = {https://CRAN.R-project.org/package=rstan},
 }
 
 @Manual{R-scales,
