Updates from Overleaf

--- a/latex/main.tex
+++ b/latex/main.tex
@@ -1,5 +1,9 @@
 %&xelatex
 
+
+% Edit links (please keep save: https://www.overleaf.com/3988312979bwydrcpjsrht#f1fe60)
+% Read link: https://www.overleaf.com/read/frscmwxxqhcq#edf650
+
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 %%%%%%%%%%%%%%%%%%%%%%% README %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
@@ -49,8 +53,8 @@
 %\graphicspath{{Fig/}}
 
 % line numbers
-%\usepackage[mathlines, switch]{lineno}
-%\usepackage[right]{lineno}
+\usepackage{lineno}
+\linenumbers
 
 % extra packages beyond OUP
 \usepackage{placeins} %to enable float barriers
@@ -93,13 +97,19 @@
 
 \title[Predicting number of languages in Remote Oceania]{A Sea of Languages: predicting the number of languages per island group in Remote Oceania}
 
+%\author[1,$\ast$]{Hedvig Skirgård}
 \author[1,$\ast$]{Anonymous Author}
 
-\authormark{Author Name et al.}
+\authormark{ANON}
+\authormark{Skirgård}
+
+%\address[1]{\orgdiv{Department of Linguistic and Cultural Evolution}, \orgname{Max Planck Institute for Evolutionary Anthropology}, \orgaddress{\street{Deutscher Platz 6}, \postcode{04103}, \state{Saxony}, \country{Germany}}}
 
 \address[1]{\orgdiv{Department}, \orgname{Organization}, \orgaddress{\street{Street}, \postcode{Postcode}, \state{State}, \country{Country}}}
 
 \corresp[$\ast$]{Corresponding author. \href{email:email-id.com}{email-id.com}}
+%\corresp[$\ast$]{Corresponding author. \href{email:Hedvig_skirgard@eva.mpg.de}{Hedvig\_skirgard@eva.mpg.de}; +46 72 853 96 73}
+
 
 \received{Date}{0}{Year}
 \revised{Date}{0}{Year}
