--- a/latex/main.tex
+++ b/latex/main.tex
@@ -605,7 +605,7 @@ These two principles, overnight sailing distances and sharing a language, have b
 
 %\citep[194]{irwin1994prehistoric} inter-island vogagýing existed and micronesian atolls are precarious
 
-\textbf{Grouping islands based on voyaging distances}. \citet{mark_1986, marck2000} has suggested that islands within 100 miles\footnote{Note that Marck uses \emph{land} miles, not \emph{sea} miles (Marck personal correspondence).} are reachable by overnight voyages in a traditional canoe (24h). This is taken to represent a good approximation of island connections of frequent contact and is supported by other accounts, such as \citep[38]{gladwin2009east} who notes a higher frequency of travel between islands within 100 miles of each other. This is a distance people may travel for tribute offerings, trade and community events, which strengthens cultural ties. Further away, and it may not be so easy to get together as often. Fig. \ref{Marck_2000_east_poly} shows this principle applied to central East Polynesia.
+\textbf{Grouping islands based on voyaging distances}. \citet{mark_1986, marck2000} has suggested that islands within 100 miles\footnote{Note that Marck uses \emph{land} miles, not \emph{nautical} miles (Marck personal correspondence).} are reachable by overnight voyages in a traditional canoe (24h). This is taken to represent a good approximation of island connections of frequent contact and is supported by other accounts, such as \citep[38]{gladwin2009east} who notes a higher frequency of travel between islands within 100 miles of each other. This is a distance people may travel for tribute offerings, trade and community events, which strengthens cultural ties. Further away, and it may not be so easy to get together as often. Fig. \ref{Marck_2000_east_poly} shows this principle applied to central East Polynesia.
 
 \begin{figure}[ht]
 \centering
@@ -616,7 +616,11 @@ These two principles, overnight sailing distances and sharing a language, have b
 
 This idea proved useful also in terms of understanding language communities. \citet{mark_1986, marck2000} demonstrates that this way of grouping islands often conforms neatly to linguistic boundaries --- especially in the north and east Pacific. For example, in Fig  \ref{Marck_2000_east_poly} the boundaries mostly line up well with well-established linguistic boundaries (with some exceptions, such as Tuamotus being split Australs merged etc). These island groups also line up somewhat with the ``interaction spheres'' in East Polynesia identified by \citet{rolett2002voyaging}\footnote{\citet{rolett2004environmental} consider islands within 50 km of each other as a meaningful unit, but do not extrapolate on why this is.}. 
 
-However, this way of grouping islands does not take into account currents and winds - they are ``just'' a simple 100-mile distance straight from the coastline. \citet{NZSA_overnight_2023} improved upon this initial idea by incorporating a cost-surface that accounts for wind, currents and canoe profile shapes. The canoe that was used to model the distances was a v-shaped outrigger, see Fig. \ref{kane_fishing_canoe}. The results were largely similar, strengthening the assumption that 100 miles is a decent approximation. It is this latter island grouping that we will use in this study. We will refer to these island groups as \textit{overnight distance groups}. Fig. \ref{polygon_plot_SBZR} shows this grouping, along with the number of languages per group. Out of the 56 island groups of this kind that were possible to include in the analysis, 45 have only one language.
+However, this way of grouping islands does not take into account currents and winds - they are ``just'' a simple 100-mile buffer zone from the coastline. \citet{NZSA_overnight_2023} improved upon this initial idea by incorporating a cost-surface that accounts for wind, currents and canoe profile shapes. Using data on winds and currents from 
+\citet{noaa_2019} and \citet{apdrc_2014}, a cost-surface model of the Pacific Ocean was created. In addition, a vessel model of a canoe was simulated (a v-shaped outrigger, see Fig. \ref{kane_fishing_canoe} for example). Voyages of 12 hours were simulated from different seed points on islands over different times over the year as current and winds vary with seasons.  
+
+The results were largely similar, strengthening the assumption that 100 miles is a decent approximation. It is this latter island grouping that we will use in this study. We will refer to these island groups as \textit{overnight distance groups}. Fig. \ref{polygon_plot_SBZR} shows this grouping, along with the number of languages per group. Out of the 56 island groups of this kind that were possible to include in the analysis, 45 have only one language.
+
 
 \begin{figure}[ht]
 \centering
@@ -624,6 +628,26 @@ However, this way of grouping islands does not take into account currents and wi
 \caption{{The painting ``A Fishing Canoe off North Kona'' by Herbert Kawainui K{\=a}ne. Illustration of an outrigger canoe with v-shaped hull. Copyright Herbert K. K{\=a}ne, LLC.}}
 \label{kane_fishing_canoe}
 \end{figure}
+
+\begin{figure}
+\centering
+\includegraphics[width=\textwidth]{SBZR_buffer.png}
+\caption{{}}
+\label{SBZR_buffer}
+\end{figure}
+
+
+\begin{figure}
+\centering
+\includegraphics[width=\textwidth]{SBZR_cost.png}
+\caption{{}}
+\label{SBZR_cost}
+\end{figure}
+
+
+
+
+
 
 \begin{sidewaysfigure}[p]
 \centering
