--- a/latex/used_pkgs.bib
+++ b/latex/used_pkgs.bib
@@ -27,7 +27,8 @@
   title = {cmdstanr: R Interface to CmdStan},
   author = {Jonah Gabry and Rok Češnovar},
   year = {2022},
-  note = {https://mc-stan.org/cmdstanr/},
+  note = {R package version 0.5.3, https://discourse.mc-stan.org},
+  url = {https://mc-stan.org/cmdstanr/},
 }
 
 @Manual{R-colorspace,
@@ -259,6 +260,14 @@ https://personality-project.org/r/psych-manual.pdf},
   year = {2020},
   note = {R package version 1.4.4},
   url = {https://github.com/hadley/reshape},
+}
+
+@Manual{R-rstan,
+  title = {rstan: R Interface to Stan},
+  author = {Jiqiang Guo and Jonah Gabry and Ben Goodrich and Sebastian Weber},
+  year = {2023},
+  note = {R package version 2.21.8},
+  url = {https://CRAN.R-project.org/package=rstan},
 }
 
 @Manual{R-scales,
